--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
-<body id="body">
+<body>
 
   <header id="headerId" class="header">
     
@@ -38,7 +38,7 @@
       
       <div id="toggle" class="toggle__wrapper">
         <input type="radio" name="mode" id="darkM">
-        <input type="radio" name="mode" id="lightM" checked>
+        <input type="radio" name="mode" id="lightM">
         <span id="radioBG" aria-hidden="true" class="toggle__background"></span>
         <span id="toggleBtn" aria-hidden="true" class="toggle__button"></span>
       </div>
